remove token
