# src/routes/User/user.route.ts
@@ -108,10 +108,18 @@ router.put('/setting/update', verifyTokenUser, async (req: Request | any, res: R
     return showOutput(res, result, result.code)
 })
 
-router.post('/emergency/trigger', async (req: Request | any, res: Response) => {
+router.post('/emergency/trigger', verifyTokenUser, async (req: Request | any, res: Response) => {
+    const { location } = req.body
+    const controller = new UserController(req, res)
+    const result: ApiResponse = await controller.emergencyNotificationTrigger({ location });
+    return showOutput(res, result, result.code)
+})
+
+
+router.post('/emergency/call', async (req: Request | any, res: Response) => {
     const { location, user_id } = req.body
     const controller = new UserController(req, res)
-    const result: ApiResponse = await controller.emergencyNotificationTrigger({ location, user_id });
+    const result: ApiResponse = await controller.withoutTokenEmergencyNotificationTrigger({ location, user_id });
     return showOutput(res, result, result.code)
 })
 
